# CPU_Usage-not-really-

cpu_usage/: CMakeLists.txt
cpu_usage/include/: functions.h
cpu_usage/src/: functions.c  threader.c
